--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
     <div class="card">
       <h3>🔐 Roubo de Dados</h3>
       <ul>
-        <li>Use senhas únicas e fortes.</li>
-        <li>Ative a verificação em duas etapas.</li>
-        <li>Não compartilhe informações pessoais desnecessárias.</li>
+        <li>Use senhas únicas e fortes para cada conta (misture letras, números e símbolos). Exemplo: 'C@sa2024!Segura' ao invés de '123456'.</li>
+        <li>Ative a autenticação em duas etapas sempre que possível. É como ter dois cadeados na porta ao invés de um.</li>
+        <li>Nunca compartilhe senhas por mensagem ou e-mail, mesmo que pareça ser do banco ou de uma empresa conhecida.</li>
       </ul>
     </div>
 
     <div class="card">
       <h3>🦠 Malware</h3>
       <ul>
-        <li>Baixe apps apenas de fontes confiáveis.</li>
-        <li>Use antivírus e mantenha o sistema atualizado.</li>
-        <li>Evite abrir anexos desconhecidos.</li>
+        <li>Instale um antivírus confiável e mantenha-o sempre atualizado. Ele funciona como um guarda que protege seu dispositivo 24 horas.</li>
+        <li>Baixe aplicativos apenas de lojas oficiais (Google Play, App Store). Evite sites desconhecidos que prometem apps 'grátis'.</li>
+        <li>Não abra anexos ou links em e-mails suspeitos, mesmo que pareçam urgentes. Na dúvida, entre em contato diretamente com a empresa.</li>
       </ul>
     </div>
 
     <div class="card">
       <h3>🎣 Phishing</h3>
       <ul>
-        <li>Desconfie de e-mails e links suspeitos.</li>
-        <li>Confira o endereço do site antes de inserir dados.</li>
-        <li>Não forneça senhas por mensagens.</li>
+        <li>Desconfie de mensagens urgentes pedindo dados pessoais ou dinheiro. Bancos NUNCA pedem senha por e-mail ou WhatsApp.</li>
+        <li>Verifique o endereço do site antes de fazer login. Sites falsos usam nomes parecidos como 'bancodobrasil.com.br' (falso) ao invés de 'bb.com.br' (verdadeiro).</li>
+        <li>Não clique em links de promoções 'imperdíveis' ou prêmios que você não participou. Se parece bom demais para ser verdade, provavelmente é golpe.</li>
       </ul>
     </div>
   </section>
@@ -56,10 +56,6 @@
     <p>Compartilhe estas dicas com amigos e familiares. Segurança é responsabilidade de todos.</p>
   </section>
 
-  <!-- ⚫ Rodapé -->
-  <footer>
-    <p>Site gerado com IA — Projeto sobre Cibersegurança</p>
-  </footer>
 
 </body>
 </html>
