--- a/index.html
+++ b/index.html
@@ -1,61 +1,98 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cibersegurança — Dicas e Proteção</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Segurança Digital - Proteja-se Online</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-  <!-- 🟦 Cabeçalho -->
-  <header>
-    <h1>Proteja-se Online</h1>
-    <p>Dicas simples de cibersegurança para o dia a dia</p>
-  </header>
+  <body>
+    <!-- Hero -->
+    <section class="hero">
+      <div class="hero-overlay"></div>
+      <img src="hero-security.jpg" alt="Segurança Digital" class="hero-img" />
+      <div class="hero-content">
+        <h1>Proteja-se no Mundo Digital</h1>
+        <p>Dicas simples e práticas de segurança cibernética para o seu dia a dia</p>
+      </div>
+    </section>
 
-  <!-- 🔵 Seção Principal -->
-  <section class="hero">
-    <h2>Segurança Digital para Todos</h2>
-    <p>Aprenda como evitar golpes, proteger seus dados e navegar com segurança.</p>
-  </section>
+    <!-- Introdução -->
+    <section class="intro">
+      <div class="intro-text">
+        <h2>Por que você precisa se proteger?</h2>
+        <p>
+          Hoje em dia, fazemos quase tudo pela internet: trabalhamos, fazemos compras,
+          conversamos com amigos e família. Mas assim como na vida real, precisamos tomar
+          cuidados para não sermos enganados ou roubados. Aqui estão os principais riscos
+          e como você pode se proteger de forma simples.
+        </p>
+      </div>
 
-  <!-- 🧱 Cards de Dicas -->
-  <section class="cards">
-    <div class="card">
-      <h3>🔐 Roubo de Dados</h3>
-      <ul>
-        <li>Use senhas únicas e fortes para cada conta (misture letras, números e símbolos). Exemplo: 'C@sa2024!Segura' ao invés de '123456'.</li>
-        <li>Ative a autenticação em duas etapas sempre que possível. É como ter dois cadeados na porta ao invés de um.</li>
-        <li>Nunca compartilhe senhas por mensagem ou e-mail, mesmo que pareça ser do banco ou de uma empresa conhecida.</li>
-      </ul>
-    </div>
+      <div class="card-grid">
+        <!-- Card 1 -->
+        <div class="card">
+          <div class="card-icon">&#128274;</div>
+          <h3>Roubo de Dados</h3>
+          <p>
+            Suas informações pessoais podem ser capturadas por criminosos para aplicar golpes
+            ou roubar sua identidade digital.
+          </p>
+          <ul>
+            <li><span>1</span>Use senhas únicas e fortes (Ex: <b>C@sa2024!Segura</b>).</li>
+            <li><span>2</span>Ative a autenticação em duas etapas.</li>
+            <li><span>3</span>Nunca compartilhe senhas por mensagem ou e-mail.</li>
+          </ul>
+        </div>
 
-    <div class="card">
-      <h3>🦠 Malware</h3>
-      <ul>
-        <li>Instale um antivírus confiável e mantenha-o sempre atualizado. Ele funciona como um guarda que protege seu dispositivo 24 horas.</li>
-        <li>Baixe aplicativos apenas de lojas oficiais (Google Play, App Store). Evite sites desconhecidos que prometem apps 'grátis'.</li>
-        <li>Não abra anexos ou links em e-mails suspeitos, mesmo que pareçam urgentes. Na dúvida, entre em contato diretamente com a empresa.</li>
-      </ul>
-    </div>
+        <!-- Card 2 -->
+        <div class="card">
+          <div class="card-icon">&#128027;</div>
+          <h3>Malware (Vírus)</h3>
+          <p>
+            Programas maliciosos podem infectar seus dispositivos, roubando dados ou espionando suas atividades.
+          </p>
+          <ul>
+            <li><span>1</span>Instale um antivírus confiável e atualizado.</li>
+            <li><span>2</span>Baixe apps apenas de lojas oficiais.</li>
+            <li><span>3</span>Não abra anexos suspeitos em e-mails.</li>
+          </ul>
+        </div>
 
-    <div class="card">
-      <h3>🎣 Phishing</h3>
-      <ul>
-        <li>Desconfie de mensagens urgentes pedindo dados pessoais ou dinheiro. Bancos NUNCA pedem senha por e-mail ou WhatsApp.</li>
-        <li>Verifique o endereço do site antes de fazer login. Sites falsos usam nomes parecidos como 'bancodobrasil.com.br' (falso) ao invés de 'bb.com.br' (verdadeiro).</li>
-        <li>Não clique em links de promoções 'imperdíveis' ou prêmios que você não participou. Se parece bom demais para ser verdade, provavelmente é golpe.</li>
-      </ul>
-    </div>
-  </section>
+        <!-- Card 3 -->
+        <div class="card">
+          <div class="card-icon">&#128737;</div>
+          <h3>Phishing (Golpes Online)</h3>
+          <p>
+            Criminosos se disfarçam de empresas para enganar você e roubar informações.
+          </p>
+          <ul>
+            <li><span>1</span>Desconfie de mensagens urgentes pedindo dados.</li>
+            <li><span>2</span>Verifique o endereço do site antes de logar.</li>
+            <li><span>3</span>Evite links de promoções “imperdíveis”.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
-  <!-- 💬 Faixa de Destaque -->
-  <section class="cta">
-    <h2>Fique sempre alerta!</h2>
-    <p>Compartilhe estas dicas com amigos e familiares. Segurança é responsabilidade de todos.</p>
-  </section>
+    <!-- Call to Action -->
+    <section class="cta">
+      <h2>Lembre-se: Prevenção é a melhor proteção!</h2>
+      <p>
+        Seguindo essas dicas simples, você estará muito mais seguro online.
+        Se algo parecer estranho, provavelmente é.
+      </p>
+      <div class="cta-list">
+        <span>🛡 Sempre desconfie</span>
+        <span>🔒 Mantenha tudo atualizado</span>
+        <span>🔑 Proteja suas senhas</span>
+      </div>
+    </section>
 
-
-</body>
+    <!-- Rodapé -->
+    <footer>
+      <p>© 2025 Segurança Digital. Mantendo você protegido online.</p>
+    </footer>
+  </body>
 </html>
